# Geodineum

./: .gitignore  CLI-REFERENCE.md  README.md  README_CLI.md  ROADMAP.md  SECURITY.md  components.yaml  geodeploy.yaml  geodineum  install.sh  nginx-deny.conf  uninstall.sh
CONTRACTS/: README.md  README_STYLE.md
assets/cli/: banner-256.ans  banner-plain.txt  banner-truecolor.ans
brand/: PROVENANCE.txt  README.md  brandsheet.html
brand/gmath_gen/: .gitignore  Cargo.toml
brand/gmath_gen/src/: main.rs
brand/tools/: banner_build.py  gen.py  terminal_logo.py
config/: config_schema.yaml  ecosystem_tools.yaml
docs/: GITHUB_AUTH.md  MULTI_NODE_DEPLOYMENT.md  nginx-deny.conf
lib/: bootstrap-loader.sh  cli-helpers.sh  common.sh  component-primitives.sh  config.sh  env.sh  geodeploy.sh  manifest-install.sh  manifest-policy.sh  manifest-registry.sh  pipeline.sh  register.sh  service.sh  site.sh
lib/geodineum-schema/: Cargo.toml
lib/geodineum-schema/src/: lib.rs
schemas/: geodeploy-manifest.schema.yaml
scripts/: add-service-credential.sh  comms-stream-inspect.sh  ecosystem-smoke-test.sh  fix-permissions.sh  geodeploy-orchestrator  harden-ecosystem.sh  install-cycle-test.sh  join-constellation.sh  nginx-deny.conf  smoketest-node.sh
scripts/cli/: geodeploy-interval.sh  geodeploy-logs.sh  geodeploy-status.sh  geodeploy-toggle.sh
templates/: bootstrap-gcore.php.tpl  bootstrap.php.tpl  bootstrap.py.tpl  config-schema.yaml.tpl  config.yaml.tpl  geodeploy.yaml.tpl  gnode_services.yaml.tpl  site.env.tpl  ssh-geodeploy-setup.sh  sudoers-geodeploy.tpl
(+5 files in other folders)
