[package]
name = "geodineum-schema"
version = "0.1.0"
edition = "2021"
authors = ["Geodineum Team"]
description = "Convention-over-configuration schema publisher for the Geodineum constellation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/geodineum/geodineum-schema"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
redis = { version = "0.26", features = ["tokio-comp"] }
tracing = "0.1"
anyhow = "1.0"
